# creatree

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
creatree/: __init__.py  cli.py  config.py  core.py  utils.py
scripts/: publish.py
tests/: cli.py  core.py  utils.py
