[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creatree"
version = "0.1.1"
requires-python = ">= 3.10"
authors = [
    {name = "Subhayu Kumar Bala", email = "balasubhayu99@gmail.com"}
]
description = "A CLI tool and library to create directory trees from tree strings."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["directory", "tree", "filesystem", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Homepage" = "https://github.com/subhayu99/creatree"
"Bug Tracker" = "https://github.com/subhayu99/creatree/issues"

[project.scripts]
creatree = "creatree.cli:main"
